added 2 sections + menu

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -327,35 +327,24 @@ body {
   color: #d61919;
 }
 
-.driver {
+.about {
   height: 100vh;
   background-color: #000000;
+  padding-top: 100px;
 }
 
-.driver .box img {
-  display: block;
-  width: 480px;
-  height: 720px;
-  margin: 0 auto;
-}
-
-.driver .box .first-line {
-  font-family: "Oswald", sans-serif;
-  text-align: center;
+.about .container .text p {
   color: #ffffff;
+  font-weight: 400;
+  font-size: 20px;
+  letter-spacing: 1px;
+  padding: 30px 0;
 }
 
-.driver .box .first-line p {
-  margin-top: 0;
-  font-size: 32px;
+.about .container .text p:first-of-type {
+  padding-top: 0;
 }
 
-.driver .box .second-line {
-  font-family: "Oswald", sans-serif;
-  text-align: center;
-  color: #ffffff;
-}
-
-.driver .box .second-line h1 {
-  font-size: 48px;
+.about .container .text p:last-of-type {
+  padding-bottom: 0;
 }
