--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -19,3 +19,6 @@ $driverTitleFontColor: #ffffff;
 // about
 $aboutBackgroundColor: #000000;
 $aboutFontColor: #ffffff;
+// gallery
+$galleryBackgroundColor: #000000;
+$galleryFontColor: #ffffff;
