--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -22,3 +22,6 @@ $aboutFontColor: #ffffff;
 // gallery
 $galleryBackgroundColor: #000000;
 $galleryFontColor: #ffffff;
+// contact
+$contactBackgroundColor: #000000;
+$contactFontColor: #ffffff;
