--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -25,3 +25,8 @@ $galleryFontColor: #ffffff;
 // contact
 $contactBackgroundColor: #000000;
 $contactFontColor: #ffffff;
+$boxBackgroundColor: #ffffff;
+$boxBorderColor: #d61919;
+$boxLogoColor: #000000;
+$boxFontColor: #000000;
+$boxHoverColor: #d61919;
