--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -332,3 +332,56 @@ body {
   background-color: #000000;
   padding-top: 100px;
 }
+
+.contact .boxes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contact .boxes .box {
+  width: 400px;
+  height: 350px;
+  text-align: center;
+  background-color: #ffffff;
+  border: solid 3px #d61919;
+  margin: 15px;
+}
+
+.contact .boxes .box a {
+  font-size: 72px;
+  color: #000000;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.contact .boxes .box a:hover {
+  color: #d61919;
+}
+
+.contact .boxes .box a i {
+  padding: 30px 0 0 0;
+}
+
+.contact .boxes .box h2 {
+  padding: 30px 0;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #000000;
+  letter-spacing: 1px;
+}
+
+.contact .boxes .box p {
+  text-decoration: none;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 16px;
+}
