--- a/assets/sass/parts/_contact.scss
+++ b/assets/sass/parts/_contact.scss
@@ -2,4 +2,51 @@
     height: 100vh;
     background-color: $contactBackgroundColor;
     padding-top: 100px;
+
+    .boxes {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+
+        .box {
+            width: 400px;
+            height: 350px;
+            text-align: center;
+            background-color: $boxBackgroundColor;
+            border: solid 3px $boxBorderColor;
+            margin: 15px;
+
+
+
+            a {
+                font-size: 72px;
+                color: $boxLogoColor;
+                transition: .2s;
+
+                &:hover {
+                    color: $boxHoverColor;
+                }
+
+                i {
+                    padding: 30px 0 0 0;
+                }
+            }
+
+            h2 {
+                padding: 30px 0;
+                font-size: 18px;
+                text-transform: uppercase;
+                color: $boxFontColor;
+                letter-spacing: 1px;
+            }
+
+            p {
+                text-decoration: none;
+                color: $boxFontColor;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                font-size: 16px;
+            }
+        }
+    }
 }
