--- a/assets/sass/parts/_contact.scss
+++ b/assets/sass/parts/_contact.scss
@@ -13,7 +13,7 @@
             height: 350px;
             text-align: center;
             background-color: $boxBackgroundColor;
-            border: solid 3px $boxBorderColor;
+            border: solid 2px $boxBorderColor;
             margin: 15px;
 
 
@@ -48,5 +48,35 @@
                 font-size: 16px;
             }
         }
+    }
+
+    .container {
+
+        .media {
+            padding: 5px;
+            margin: 80px 0 5px 0;
+            background-color: white;
+            width: 200px;
+            text-align: center;
+
+            a {
+                font-size: 50px;
+
+                .fa-facebook {
+                    color: #4267B2;
+                    padding-right: 10px;
+                }
+
+                .fa-twitter-square {
+                    color: #1da1f2;
+                    padding-right: 10px;
+                }
+
+                .fa-linkedin {
+                    color: #2867b2;
+                }
+            }
+        }
+
     }
 }
