--- a/assets/sass/parts/_contact.scss
+++ b/assets/sass/parts/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-    height: 100vh;
+    min-height: 100vh;
     background-color: $contactBackgroundColor;
     padding-top: 100px;
 
@@ -9,6 +9,7 @@
         justify-content: center;
 
         .box {
+            font-family: $menuLogoFontFamily;
             width: 400px;
             height: 350px;
             text-align: center;
@@ -19,7 +20,7 @@
 
 
             a {
-                font-size: 72px;
+                font-size: 82px;
                 color: $boxLogoColor;
                 transition: .2s;
 
@@ -33,19 +34,21 @@
             }
 
             h2 {
-                padding: 30px 0;
+                padding: 30px 10px;
                 font-size: 18px;
+                font-weight: 700;
                 text-transform: uppercase;
                 color: $boxFontColor;
-                letter-spacing: 1px;
+                letter-spacing: .8px;
             }
 
             p {
+                padding: 0 10px;
                 text-decoration: none;
                 color: $boxFontColor;
                 text-transform: uppercase;
-                letter-spacing: 1px;
-                font-size: 16px;
+                letter-spacing: .8px;
+                font-size: 18px;
             }
         }
     }
@@ -54,22 +57,26 @@
 
         .media {
             padding: 5px;
-            margin: 80px 0 5px 0;
+            margin: 60px 0 0 0;
             background-color: white;
-            width: 200px;
+            width: 205px;
             text-align: center;
+
+            @media (min-width:1300px) {
+                margin: 280px 0 0 0;
+            }
 
             a {
                 font-size: 50px;
 
                 .fa-facebook {
                     color: #4267B2;
-                    padding-right: 10px;
+                    padding-right: 15px;
                 }
 
                 .fa-twitter-square {
                     color: #1da1f2;
-                    padding-right: 10px;
+                    padding-right: 15px;
                 }
 
                 .fa-linkedin {
