--- a/assets/sass/parts/_menu.scss
+++ b/assets/sass/parts/_menu.scss
@@ -22,6 +22,7 @@
 
     nav {
 
+
         ul {
             display: flex;
 
@@ -47,4 +48,47 @@
             }
         }
     }
+
+    // .hamburger {
+    //     width: 40px;
+    //     height: 35px;
+    //     border: 0;
+    //     border-top: 4px solid #000000;
+    //     background: transparent;
+    //     position: relative;
+    //     transition: 0.2s;
+    //     top: 20px;
+    //     right: 40px;
+    //     display: none;
+
+    //     &::before {
+    //         content: "";
+    //         position: absolute;
+    //         top: 0;
+    //         left: 0;
+    //         width: 100%;
+    //         border-top: 4px solid #000000;
+    //         transform: translateY(10px);
+    //     }
+
+    //     &::after {
+    //         content: "";
+    //         position: absolute;
+    //         top: 0;
+    //         left: 0;
+    //         width: 100%;
+    //         border-top: 4px solid #000000;
+    //         transform: translateY(25px);
+
+    //     }
+
+    //     &:focus {
+    //         transform: rotate(45deg) translateY(5px);
+    //         border: none;
+
+    //         &::after {
+    //             transform: rotate(-90deg) translateX(-10px);
+    //         }
+    //     }
+    // }
 }
